# apogaea

./: .gitignore
piddle/: CLAUDE.md  README.md  artnetReceiver.cpp  artnetReceiver.hpp  bluetoothAudio.cpp  bluetoothAudio.hpp  compile.sh  constants.hpp  piddle.ino  power_sim.py  secrets.hpp.example  serial.sh  spectrumAnalyzer.cpp  spectrumAnalyzer.hpp  steps.py  upload.sh
piddle/.claude/: settings.local.json
piddle/I2SClocklessLedDriver/: I2SClocklessLedDriver.h
piddle/pcb/: add-points.py  piddle.kicad_pcb  piddle.kicad_pcb.backup  piddle.kicad_prl  piddle.kicad_pro  piddle.kicad_sch
piddle/sim/: CMakeLists.txt  audio.cpp  audio.h  display.cpp  display.h  dsp.cpp  dsp.h  main.cpp  renderer.cpp  renderer.h  sim_constants.h
vest/: animations.cpp  animations.hpp  vest.ino
vest/demo/: Makefile  demo.cpp
voltageMonitor/: compile.sh  upload.sh  voltageMonitor.ino
